[JAVA 9] : ajout de --add-exports pour l'export de package